# rules_jfrog

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  PRD.md  README.md
.bcr/: metadata.template.json
.github/workflows/: BUILD.bazel  ci.yaml  publish.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
jfrog/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
jfrog/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
jfrog/tests/: versions_test.bzl
