load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

# TODO: Implement JFrog-specific toolchain type when needed
# toolchain_type(
#     name = "toolchain_type",
#     visibility = ["//visibility:public"],
# )

# TODO: Implement resolved_toolchain when JFrog toolchain is needed
# resolved_toolchain(
#     name = "resolved_toolchain",
#     tags = ["manual"],
#     visibility = ["//visibility:public"],
# )

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        # TODO: Re-enable when JFrog-specific implementations are added
        # "//jfrog/private:toolchains_repo",
        # "//jfrog/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [":repositories"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
